[gd_scene load_steps=6 format=3 uid="uid://chu7lbhuxpdt"]

[ext_resource type="Script" path="res://script/enemy_l3.gd" id="1_7wl4x"]
[ext_resource type="SpriteFrames" uid="uid://bcgtscvk715q1" path="res://Tileset/mundo3/Characters/Enemy_L3_2.tres" id="2_novwg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r31l6"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6x7ig"]
radius = 6.41485

[sub_resource type="CircleShape2D" id="CircleShape2D_np0qy"]
radius = 23.8603

[node name="Enemy_L3_2" type="CharacterBody2D"]
script = ExtResource("1_7wl4x")
speed = 60.0
attack_damage = 35.0
attack_range = 20.0
max_life = 300.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 6)
scale = Vector2(0.541667, 0.575521)
sprite_frames = ExtResource("2_novwg")
animation = &"attack_right"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -34.0
offset_top = -50.0
offset_right = 35.0
offset_bottom = -43.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r31l6")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(48, 21)
scale = Vector2(-2.6501, 2.46722)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18.1125, -8.5116)
shape = SubResource("CircleShape2D_6x7ig")
debug_color = Color(0.853608, 0.338231, 0.396533, 0.42)

[node name="AttackTimer" type="Timer" parent="."]

[node name="DetentionArea" type="Area2D" parent="."]
scale = Vector2(1.88598, 1.54622)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetentionArea"]
shape = SubResource("CircleShape2D_np0qy")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="DetentionArea" to="." method="_on_detention_area_body_entered"]
[connection signal="body_exited" from="DetentionArea" to="." method="_on_detention_area_body_exited"]
